transcoding.log
  File "/Users/timbanks/MyWork/Refresh Music Server/transcoding.py", line 127
    if (f.find(".m4a") > -1 and f.find("NOT Lydia Mordkovich") >-1 and transcoded<=transcodeConstraint:
                                                                                                      ^
SyntaxError: invalid syntax
[2025 Apr 16 20:14:00] {minimRescanWrapper.zsh} 
+*rescan
+:status=0
